--- a/src/main/resources/templates/category/categories-list.html
+++ b/src/main/resources/templates/category/categories-list.html
@@ -66,7 +66,7 @@
 				<option value="Name">카테고리 이름</option>
 			</select> <input type="text" name="keyword" placeholder="검색어를 입력하세요">
 			<input type="hidden" name="page" th:value="${paging.getCurrent()}">
-
+					
 			<button type="submit">검색</button>
 		</form>
 		
@@ -80,10 +80,12 @@
 					<th>카테고리 번호</th>
 					<th>상위 카테고리 번호</th>
 					<th>카테고리 이름</th>
+					<th>작성자</th>
+					<th>작성일</th>
 				</tr>
 				<!-- 검색 결과가 없는 경우 -->
 				<tr th:if="${#lists.isEmpty(categoriesList)}">
-					<td colspan="4" class="no-results">검색 결과가 없습니다.</td>
+					<td colspan="6" class="no-results">검색 결과가 없습니다.</td>
 				</tr>
 
 				<!-- 검색 결과가 있는 경우 -->
@@ -92,6 +94,8 @@
 				    <td th:text="${category.category_num}"></td>
 				    <td th:text="${category.parent_category_num}"></td>
 				    <td><a th:href="@{/category/view-category-detail.do(categoryNum=${category.category_num})}" th:text="${category.name}"></a></td>
+				    <td th:text="${category.created_user_num}"></td>
+				    <td th:text="${#dates.format(category.created_at, 'yyyy-MM-dd')}"></td>
 				</tr>
 			</table>
 		</div>
