--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 		<header>
 			<!-- 로고 영역 -->
 	    	<h1 class="logo-area">
-	    		<a href="/index.do" class="link"><img class="logo-main" src="/img/aniplant_logo02.png"></a>
+	    		<a href="/index.do" class="link"><img class="logo-main" src="/img/aniplant_logo_animation.gif"></a>
 	    		<a href="" class="link"><img class="logo-sub"src=""></a>
 	  		</h1>
 			<!-- 검색창 영역 -->
