--- a/src/main/resources/templates/sidebar/privacy-admin.html
+++ b/src/main/resources/templates/sidebar/privacy-admin.html
@@ -28,7 +28,7 @@
 			<li><a href="/privacy-admin/pet-management/admin-pet-list.do">반려 동물 리스트</a></li>
 		</ul>
 		<div class="contact-us">
-			<a href="/board/listArticles.do?categoryNum=7">고객문의</a>
+			<a href="/board/articles-list.do?categoryNum=7">고객문의</a>
 		</div>
 	</div>
 
