--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,13 +5,81 @@
       layout:decorate="~{layout/defaultLayout}">
 
 <!-- index.html 고유 CSS 추가 -->
-<th:block layout:fragment="css"></th:block>
+<th:block layout:fragment="css">
+    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+</th:block>
+
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <!--    <script th:src="@{/js/page/home.js}"></script>-->
+   <script th:src="@{/js/main.js}"></script>
 </th:block>
 
 <!-- Content -->
 <div layout:fragment="content" class="container">
-    <h1>도욱이는 바보얌</h1>
+    <div class="content">
+        <div class="ad-banner">
+            <!-- <div class="slide" th:each="banner : ${banners}"> -->
+                <!-- <img th:src="@{'/img/main/' + ${banner}}" alt="Banner Image" /> -->
+            <!-- </div> -->
+            <div class="slide">
+                <img th:src="@{/img/main/banner6.png}" alt="Banner Image" /> 
+            </div>
+            <a href="#" class="prev" onclick="moveSlide(-1)">&#10094;</a>
+            <a href="#" class="next" onclick="moveSlide(1)">&#10095;</a>
+        </div>
+        <div class="board-wrapper">
+            <!-- 인기 게시물 -->
+            <div class="board" id="popular">
+                <div class="title-area"><img th:src="@{/img/main/popularity.png}" class="title-icon" style="margin-right: 8px;"><h2 class="board-title">인기 게시글</h2></div>
+                <ul class="board-list">
+                    <li><a href="#">인기 게시물 제목1</a></li>
+                    <li><a href="#">인기 게시물 제목2</a></li>
+                </ul>
+            </div>
+            <div id="pet-plant-wrapper">
+                <!-- 동물 게시판 -->
+                <div class="board">
+                    <div class="title-area"><img th:src="@{/img/main/pets.png}" class="title-icon"><h2 class="board-title">반려동물 게시판</h2></div>
+                    <div class="board-list">
+                        <div class="board-item" th:each="board, iterStat : ${petBoardList}" th:if="${iterStat.count <= 4}" th:data-postnum="${board.post_num}">
+                            <span th:text="${board.title}"></span>
+                            <span th:text="${board.author}"></span>
+                            <span th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                    <a th:href="@{/board/petBoard}" class="more-link">더보기</a>
+                </div>
+                
+                <!-- 식물 게시판 -->
+                <div class="board">
+                    <div class="title-area"><img th:src="@{/img/main/plants.png}" class="title-icon"><h2 class="board-title">반려식물 게시판</h2></div>
+                    <ul class="board-list">
+                        <li><a href="#">식물 게시물 제목1</a></li>
+                        <li><a href="#">식물 게시물 제목2</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="board-wrapper-2">
+            <!-- 이 달의 주인님 -->
+            <div class="board" id="owner">
+                <div class="title-area"><img th:src="@{/img/main/crown.png}" class="title-icon"><h2 class="board-title">이 달의 주인님</h2></div>
+                <ul class="board-list">
+                    <li><a href="#">1등</a></li>
+                    <li><a href="#">2등</a></li>
+                </ul>
+            </div>
+            <!-- 자유 게시판 -->
+            <div class="board" id="free-board">
+                <div class="title-area"><img th:src="@{/img/main/corkboard.png}" class="title-icon"><h2 class="board-title">자유 게시판</h2></div>
+                <ul class="board-list">
+                    <li><a href="#">자유 게시물 제목1</a></li>
+                    <li><a href="#">자유 게시물 제목2</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 </div>
+
+</html>
