--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,11 +18,8 @@
 <div layout:fragment="content" class="container">
     <div class="content">
         <div class="ad-banner">
-            <!-- <div class="slide" th:each="banner : ${banners}"> -->
-                <!-- <img th:src="@{'/img/main/' + ${banner}}" alt="Banner Image" /> -->
-            <!-- </div> -->
-            <div class="slide">
-                <img th:src="@{/img/main/banner6.png}" alt="Banner Image" /> 
+            <div class="slide" th:each="banner : ${banners}">
+                <img th:src="@{'/img/main/' + ${banner}}" alt="Banner Image" />
             </div>
             <a href="#" class="prev" onclick="moveSlide(-1)">&#10094;</a>
             <a href="#" class="next" onclick="moveSlide(1)">&#10095;</a>
@@ -31,10 +28,13 @@
             <!-- 인기 게시물 -->
             <div class="board" id="popular">
                 <div class="title-area"><img th:src="@{/img/main/popularity.png}" class="title-icon" style="margin-right: 8px;"><h2 class="board-title">인기 게시글</h2></div>
-                <ul class="board-list">
-                    <li><a href="#">인기 게시물 제목1</a></li>
-                    <li><a href="#">인기 게시물 제목2</a></li>
-                </ul>
+                <div class="board-list">
+                    <div class="board-item" th:each="board, iterStat : ${popularBoardList}" th:if="${iterStat.count <= 4}" th:data-postnum="${board.post_num}">
+                        <span class="title" th:text="${board.title}"></span>
+                        <span class="author" th:text="${board.author}"></span>
+                        <span class="date" th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></span>
+                    </div>
+                </div>
             </div>
             <div id="pet-plant-wrapper">
                 <!-- 동물 게시판 -->
@@ -42,9 +42,9 @@
                     <div class="title-area"><img th:src="@{/img/main/pets.png}" class="title-icon"><h2 class="board-title">반려동물 게시판</h2></div>
                     <div class="board-list">
                         <div class="board-item" th:each="board, iterStat : ${petBoardList}" th:if="${iterStat.count <= 4}" th:data-postnum="${board.post_num}">
-                            <span th:text="${board.title}"></span>
-                            <span th:text="${board.author}"></span>
-                            <span th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></span>
+                            <span class="title" th:text="${board.title}"></span>
+                            <span class="author" th:text="${board.author}"></span>
+                            <span class="date" th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></span>
                         </div>
                     </div>
                     <a th:href="@{/board/petBoard}" class="more-link">더보기</a>
@@ -53,28 +53,39 @@
                 <!-- 식물 게시판 -->
                 <div class="board">
                     <div class="title-area"><img th:src="@{/img/main/plants.png}" class="title-icon"><h2 class="board-title">반려식물 게시판</h2></div>
-                    <ul class="board-list">
-                        <li><a href="#">식물 게시물 제목1</a></li>
-                        <li><a href="#">식물 게시물 제목2</a></li>
-                    </ul>
+                    <div class="board-list">
+                        <div class="board-item" th:each="board, iterStat : ${plantBoardList}" th:if="${iterStat.count <= 4}" th:data-postnum="${board.post_num}">
+                            <span class="title" th:text="${board.title}"></span>
+                            <span class="author" th:text="${board.author}"></span>
+                            <span class="date" th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                    <a th:href="@{/board/plantBoard}" class="more-link">더보기</a>
                 </div>
             </div>
         </div>
         <div class="board-wrapper-2">
             <!-- 이 달의 주인님 -->
             <div class="board" id="owner">
-                <div class="title-area"><img th:src="@{/img/main/crown.png}" class="title-icon"><h2 class="board-title">이 달의 주인님</h2></div>
-                <ul class="board-list">
-                    <li><a href="#">1등</a></li>
-                    <li><a href="#">2등</a></li>
-                </ul>
+                <div class="title-area">
+                    <img th:src="@{/img/main/crown.png}" class="title-icon">
+                    <h2 class="board-title">이 달의 주인님</h2>
+                </div>
+                <div class="owner-li" th:each="owner, iterStat : ${topOwnerList}" th:if="${iterStat.count == 1}" >
+                    <div style="color: gold; font-weight: 700;">1등 : <span th:text="${owner.author}" ></span></div>
+                </div>
+                <div class="owner-li" th:each="owner, iterStat : ${topOwnerList}" th:if="${iterStat.count == 2}" >
+                    <div style="color: silver; font-weight: 650;">2등 : <span th:text="${owner.author}"></span></div>
+                </div>
+                <div class="owner-li" th:each="owner, iterStat : ${topOwnerList}" th:if="${iterStat.count == 3}" >
+                    <div  style="color: #cd7f32; font-weight: 600;">3등 : <span th:text="${owner.author}"></span></div>
+                </div>
             </div>
             <!-- 자유 게시판 -->
             <div class="board" id="free-board">
                 <div class="title-area"><img th:src="@{/img/main/corkboard.png}" class="title-icon"><h2 class="board-title">자유 게시판</h2></div>
                 <ul class="board-list">
-                    <li><a href="#">자유 게시물 제목1</a></li>
-                    <li><a href="#">자유 게시물 제목2</a></li>
+                    <li><a href="#" style="font-size: 20px; font-style: italic; color: #69D1C6;">시간 부족으로 인한 자유 게시판 미구현 ㅠㅡㅠ</a></li>
                 </ul>
             </div>
         </div>
