--- a/src/main/resources/templates/event/admincreateEvent.html
+++ b/src/main/resources/templates/event/admincreateEvent.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>일정 등록</title>
 </head>
+
+   <link rel="stylesheet" th:href="@{/css/event.css}">    
 <body>
     <h2>등록 완료!</h2>
     <a th:href="@{/event/adminlistEvents.do}" class="button">다음</a>  
       
-    <style>
+    <style> 
         .button {
             display: inline-block;
             padding: 5px 20px;
