--- a/src/main/resources/templates/event/admincreateEventForm.html
+++ b/src/main/resources/templates/event/admincreateEventForm.html
@@ -2,31 +2,35 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/adminLayout}">
-<!-- 페이지의 제목 설정 --> 
+
+<th:block layout:fragment="css">
+</th:block>
+<th:block layout:fragment="script">
+</th:block>
+
 <head>
+<link rel="stylesheet" th:href="@{/css/event.css}">   
+   <meta charset="UTF-8">
     <title>일정 등록</title>
 </head>
+
+ 
 <body>
-<!-- 해당 페이지 고유 CSS 추가 -->
-<th:block layout:fragment="css">
-    <!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
-</th:block>
-<!-- 해당 페이지 고유 스크립트 추가 -->
-<th:block layout:fragment="script">
-    <!--    <script th:src="@{/js/page/home.js}"></script>-->
-</th:block>
 
 
 <!-- Content -->
 <div layout:fragment="content" class="container">
     <!-- sidebar fragment 사용 -->
    <div th:replace="sidebar/privacy-admin :: userManagementSidebar"></div> 
-    <div class="content">일정 등록</div> 
-    
+    <div class="content"></div> 
+     
    <style> 
+   
+     
     .form-container {
-        margin-top: 40px; /* 조절할 여유값을 설정하세요 */ 
-    }
+        margin-top: 70px; /* 조절할 여유값을 설정하세요 */   
+        margin-left: -100px;    
+    }  
  
     .form-group {
         display: flex;
@@ -44,6 +48,7 @@
     }
      
 </style> 
+<h2>일정 등록</h2>   
 
 <div class="form-container"> 
     <form th:action="@{/event/admincreateEvent}" th:object="${event}" method="post"> 
@@ -72,9 +77,9 @@
             <input type="text" id="content" name="content" th:field="*{content}" required>
         </div>
 
-        <button type="submit">등록</button>
+        <button type="submit">등록</button> 
     </form>
-</div>  
+</div>   
  <script>
     var startedAtElement = document.getElementById("started_at");
     var endedAtElement = document.getElementById("ended_at");
