--- a/src/main/resources/templates/event/admincreateEventForm.html
+++ b/src/main/resources/templates/event/admincreateEventForm.html
@@ -105,16 +105,13 @@
         var startDate = new Date(startDateElement.value);
         var endDate = new Date(endDateElement.value);
  
-        if (startDate >= endDate) {
+        if (startDate > endDate) {
             dateErrorElement.textContent = "시작일은 종료일보다 이전이어야 합니다.";
-            // 유효하지 않은 경우, 입력 필드를 지울 수 있도록 다음 두 줄을 주석 처리합니다.
-            // startDateElement.value = "";
-            // endDateElement.value = "";
             submitButton.disabled = true; // 등록 버튼 비활성화
         } else {
             dateErrorElement.textContent = "";
             submitButton.disabled = false; // 등록 버튼 활성화
-        }
+        } 
     }
 </script>
     </div> 
