--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -27,26 +27,29 @@ li {
     display: flex;
 }
 /* 페이징 select */
-#perPageNumSelect > select {
+select {
     height: 36px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border: none;
-    border-radius: 5px;
+    padding: 5px;
+    padding-right: 30px;
+    padding-left: 20px;
     margin-right: 10px;
-    color: #fff;
-    font-family: "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", Sans-Serif;;
+    font-size: 14px;
     font-weight: 500;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    transition: border-color 0.2s ease-in-out;
+    appearance: none;
+    background-image: url('/img/arrow-down-bold.png');
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-position: right 10px center;
+    background-size: 15px 15px;
     cursor: pointer;
-    background: linear-gradient(to right, #14B8A6, #43c6b8);
-    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
-#perPageNumSelect > select:focus {
-    outline: #0A5E55;
-}
-#perPageNumSelect > select:hover {
-    background: linear-gradient(to right, #109385, #14B8A6);
-    box-shadow: 0 6px 8px rgba(50, 50, 93, 0.11), 0 2px 4px rgba(0, 0, 0, 0.08);
+
+select::-ms-expand {
+    display: none;
 }
 
 /* 버튼 */
@@ -66,4 +69,89 @@ li {
 }
 .h2-wrapper div > button:active {
     transform: translateY(0);
+}
+/* 게시판 테이블 */
+.category-table th:first-child {
+    border-top-left-radius: 5px;
+}
+
+.category-table th:last-child {
+    border-top-right-radius: 5px;
+}
+.category-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    font-size: 15px; /* 글씨 크기를 1픽셀 키웠습니다. */
+}
+
+.category-table th, .category-table td {
+    padding: 10px 15px;
+    border-bottom: 1px solid #e0e0e0; /* 세로줄을 제거했습니다. */
+    text-align: center;
+}
+
+.category-table th {
+    background-color: #69D1C6;
+    color: #333;
+}
+
+.category-table td:nth-child(3) a { /* 제목 부분에 해당하는 셀 선택 */
+    overflow: hidden; /* 글자가 넘칠 때 숨깁니다. */
+    white-space: nowrap; /* 텍스트를 한 줄로 만듭니다. */
+    text-overflow: ellipsis; /* 글자가 넘칠 때 ...으로 표시합니다. */
+    max-width: 100%; /* 최대 너비 설정 */
+}
+
+.category-table tr:nth-child(even) {
+    background-color: #DFF5F3; /* 짝수 행의 배경색을 설정했습니다. */
+}
+
+.category-table tr:hover {
+    background-color: #bde8df; /* hover 시 살짝 진한 색으로 변경 */
+}
+
+.no-results {
+    text-align: center;
+    color: #999;
+}
+
+/* 페이징 부분 */
+.pagination {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.pagination ul {
+    display: inline-block;
+    padding-left: 0;
+}
+
+.pagination li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.pagination li a {
+    display: inline-block;
+    padding: 5px 10px;
+    border: 1px solid #e0e0e0;
+    background-color: #fff;
+    color: #333;
+    text-decoration: none;
+    border-radius: 3px;
+}
+
+.pagination li a:hover {
+    background-color: #14B8A6;
+    color: #fff;
+    border-color: #14B8A6;
+}
+.pagination li.active a {
+    color: #0A5E55;
+    font-weight: bold;
+    text-decoration: underline;
+}
+.pagination li.active a:hover {
+    color: #fff;
 }
