--- a/src/main/resources/templates/board/articles-list.html
+++ b/src/main/resources/templates/board/articles-list.html
@@ -53,37 +53,17 @@
 				<button type="button" id="article-register-btn" onclick="redirectToArticleForm()">게시글 등록</button>
 			</div>
 		</div>
-		<!-- <h3>
-			<a th:href="@{/board/articles-list.do?categoryNum=3}">게시글 리스트</a>
-		</h3> -->
-
-		<!-- <form id="searchForm" action="/board/articles-list-search.do" method="get">
-			<select name="searchType">
-				<option value="Post_Num">게시글 번호</option>
-				<option value="Title">제목</option>
-			</select> 
-			<input type="text" name="keyword" placeholder="검색어를 입력하세요">
-			<input type="hidden" name="page" th:value="${paging.getCurrent()}">
-			<input type="hidden" name="categoryNum" th:value="${category.category_num}">
-				
-			<input type="text" name="categoryNum" th:value="${paging.getCurrent()}">
-			<input type="text" name="categoryNum" th:value="${paging.cri.page}">
-			<input type="text" name="categoryNum" th:value="${paging.totalPage}">
-			<input type="text" name="categoryNum" th:value="${paging.startPage}">
-			<button type="submit">검색</button>
-		</form> -->
-
 		<div>
 			<table class="category-table">
 				<tr>
-					<th>No.</th>
-					<th>게시글 번호</th>
+					<th>No</th>
+					<th>번호</th>
 					<th>제목</th>
-					<th>작성자</th>
-					<th>조회수</th>
+					<th>글쓴이</th>
+					<th>작성일</th>
+					<th>조회</th>
 					<th>추천</th>
 					<th>비추천</th>
-					<th>작성일</th>
 				</tr>
 				<!-- 검색 결과가 없는 경우 -->
 				<tr th:if="${#lists.isEmpty(articlesList)}">
@@ -91,15 +71,15 @@
 				</tr>
 
 				<!-- 검색 결과가 있는 경우 -->
-				<tr th:each="board, rowStat : ${articlesList}">
+				<tr th:each="board, rowStat : ${articlesList}" onclick="redirectToArticlePage(this);">
 				    <td th:text="${(paging.getCurrent() - 1) * paging.getPerPageNumVal() + (rowStat.index + 1)}"></td>
-				    <td th:text="${board.post_num}"></td>
-					<td><a class="cls1" th:href="@{/board/viewArticle.do(post_num=${board.post_num})}" th:text="${board.title}"></a></td>
+				    <td class="postNum" th:text="${board.post_num}"></td>
+					<td th:text="${board.title}"></td>
 					<td th:text="${board.created_user_num}"></td>
+					<td th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></td>
 					<td th:text="${board.views}"></td>
 					<td th:text="${board.good}"></td>
 					<td th:text="${board.bad}"></td>
-					<td th:text="${#dates.format(board.created_at, 'yyyy-MM-dd')}"></td>
 				</tr>
 			</table>
 		</div>
