--- a/src/main/resources/templates/board/viewArticle.html
+++ b/src/main/resources/templates/board/viewArticle.html
@@ -31,43 +31,59 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
    
    var isGoodVoted = false;
    var isBadVoted = false;
+   var goodButtonClicked = false;
+   var badButtonClicked = false;
+   var currentUserNum;
+   $(document).ready(function() {
+	   currentUserNum = $("#curUserNum").text();
+	});
 
    function toggleGoodCount(post_num) {
-       if (!isGoodVoted) {
-           $.ajax({
-               type: "POST",
-               url: "/board/increaseGoodCount",
-               data: { post_num: post_num },
-               success: function (response) {
-                   alert(response);
-                   isGoodVoted = true;
-               },
-               error: function (error) {
-                   alert("오류가 발생했습니다.");
-               },
-           });
-       } else {
-           alert("이미 추천하셨습니다.");
-       }
+	// 이미 클릭된 경우 아무 작업도 수행하지 않습니다.
+	    if (goodButtonClicked) {
+	        return;
+	    }
+       $.ajax({
+           type: "POST",
+           url: "/vote", 
+           data: {
+               user_num: currentUserNum,
+               post_num: post_num,
+               vote_type: "good"
+           },
+           success: function (response) {
+               alert(response);
+            // 성공한 경우 클릭 여부를 true로 설정합니다.
+               goodButtonClicked = true;
+           },
+           error: function (error) {
+               alert("이미 투표한 게시물입니다.");
+           },
+       });
    }
 
    function toggleBadCount(post_num) {
-       if (!isBadVoted) {
-           $.ajax({
-               type: "POST",
-               url: "/board/increaseBadCount",
-               data: { post_num: post_num },
-               success: function (response) {
-                   alert(response);
-                   isBadVoted = true;
-               },
-               error: function (error) {
-                   alert("오류가 발생했습니다.");
-               },
-           });
-       } else {
-           alert("이미 비추천하셨습니다.");
-       }
+	   // 이미 클릭된 경우 아무 작업도 수행하지 않습니다.
+	    if (badButtonClicked) {
+	        return;
+	    }
+       $.ajax({
+           type: "POST",
+           url: "/vote", 
+           data: {
+               user_num: currentUserNum,
+               post_num: post_num,
+               vote_type: "bad"
+           },
+           success: function (response) {
+               alert(response);
+            // 성공한 경우 클릭 여부를 true로 설정합니다.
+               badButtonClicked = true;
+           },
+           error: function (error) {
+               alert("이미 투표한 게시물입니다.");
+           },
+       });
    }
    
    document.addEventListener("DOMContentLoaded", function() {
@@ -160,8 +176,9 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
 
             <input type="hidden" name="categoryNum"   th:value="${board.category_num}" />
          </form>
-
-               <button id="goodButton" th:attr="data-post-num=${board.post_num}" onclick="toggleGoodCount(this.getAttribute('data-post-num'))">추천</button>
+				
+				<span id="curUserNum" th:text="${#authentication.principal.usernum}" style="display: none;"></span>
+                <button id="goodButton" th:attr="data-post-num=${board.post_num}" onclick="toggleGoodCount(this.getAttribute('data-post-num'))">추천</button>
                 <button id="badButton" th:attr="data-post-num=${board.post_num}" onclick="toggleBadCount(this.getAttribute('data-post-num'))">비추천</button>
 
   </div>
