--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -242,7 +242,7 @@ footer {
 	font-weight: 800;
 }
 .contact-us {
-	border-top: 1px solid #c1ece7;
+	border-top: 1px solid #c1e7ec;
     margin-top: 15px;
     padding-top: 10px;
 }
