--- a/src/main/resources/templates/sidebar/article.html
+++ b/src/main/resources/templates/sidebar/article.html
@@ -22,7 +22,9 @@
                 </ul>
             </li>
         </ul>
-        <a href="/board/articles-list.do?categoryNum=7">고객문의</a>
+        <div class="contact-us">
+            <a href="/board/articles-list.do?categoryNum=7">고객문의</a>
+        </div>
     </div>
 </body>
 </html>
